53-6 Implement Review Item style with a lot of flex

--- a/Module-53/ema-jhon-e-commarce/src/components/ReviewItem/ReviewItem.css
+++ b/Module-53/ema-jhon-e-commarce/src/components/ReviewItem/ReviewItem.css
@@ -1,9 +1,25 @@
-.carted-product {
+.review-item {
     display: flex;
     align-items: center;
-    padding-left: 140px;
+    margin-top: 21px;
+    border: 1px solid #95a0a7;
+    border-radius: 8px;
+    padding: 8px;
+    width: 571px;
 }
 
 img {
-    width: 50px;
+    width: 91px;
+    /* height: 100px; */
+}
+
+.review-details p {
+    margin: 0px;
+}
+
+.review-item-details-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
