53-7 More style of Review item and apply Remove Item handler

--- a/Module-53/ema-jhon-e-commarce/src/components/ReviewItem/ReviewItem.css
+++ b/Module-53/ema-jhon-e-commarce/src/components/ReviewItem/ReviewItem.css
@@ -23,3 +23,26 @@ img {
     justify-content: space-between;
     align-items: center;
 }
+
+.review-item .delete-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.review-item .delete-button {
+    background: rgba(235, 87, 87, 0.3);
+    border: 0;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.delete-icon {
+    color: rgba(235, 87, 87, 1);
+    font-size: 27px;
+
+}
