--- a/milestone-bonus/src/components/Activity/Activity.css
+++ b/milestone-bonus/src/components/Activity/Activity.css
@@ -1,10 +1,15 @@
 .activity{
     border: 2px solid goldenrod; 
     border-radius: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    /* margin: 10px; */
+    /* display: grid; */
+    /* grid-template-columns: repeat(3, 1fr); */
+    /* grid-gap: 20px; */
 }
 .activity img{
     width: 200px;
+}
+
+.infos{
+    margin: 10px;
 }
